# MCP2Skills

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  batch_convert.py  example-github-mcp.json  mcp_to_skill_v2.py  pyproject.toml
src/mcp2skills/: __init__.py  ai_generator.py  cli.py  config.py  converter.py
src/mcp2skills/templates/: daemon_executor.py  daemon_service.py  executor.py  skill_md.py
